--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ base_url = "https://miguelpimentel.do/"                                         
 title = "semanticdata"
 description = "Miguel Pimentel. Problem solver, hobby developer, music enjoyer, and public infrastructure enthusiast."
 default_language = "en"
-theme = "serene"
+# theme = "serene"
 output_dir = "public"
 compile_sass = true
 minify_html = true
