--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Zola
         uses: taiki-e/install-action@zola
       - name: Build Zola
-        run: zola build
+        run: zola check
         env:
           BUILD_ONLY: true
           BUILD_FLAGS: --drafts
